edit dependency layout

--- a/site1/home/Templates/HSTuongQuan.html
+++ b/site1/home/Templates/HSTuongQuan.html
@@ -127,7 +127,7 @@
       }
 
         .sidebar ul li a#popular-link {
-          color: #ffd700; /* Màu vàng cho Tập Phổ Biến */
+          color: #ffd700;
           font-weight: bold; /* Làm đậm chữ */
         }
 
