change title reduct

--- a/site1/home/Templates/reduct.html
+++ b/site1/home/Templates/reduct.html
@@ -362,7 +362,7 @@
 
     <div class="main-content"> 
       <div class="content-header">
-        <h1>Khảo sát phụ thuộc</h1>
+        <h1>Tính tập thô</h1>
       </div>
     
       <div class="content">
