--- a/site1/home/Templates/reduct.html
+++ b/site1/home/Templates/reduct.html
@@ -56,7 +56,11 @@
       }
 
       .sidebar ul li a#home-link {
-        color: #ffd700; /* Màu vàng cho chữ "Trang chủ" */
+        color: #FFFFFFFF; /* Màu vàng cho chữ "Trang chủ" */
+      }
+
+      .sidebar ul li a#popular-link {
+        color: #ffd700;
         font-weight: bold; /* Làm đậm chữ */
       }
 
@@ -266,7 +270,7 @@
     
         <!-- Phân lớp -->
         <li>
-          <a href="#" id="popular-link" onclick="toggleSubMenu('classification')">
+          <a href="#" onclick="toggleSubMenu('classification')">
             <svg xmlns="http://www.w3.org/2000/svg" height="20px" width="20px" viewBox="0 -960 960 960" fill="#ffffff">
               <path d="M600-120v-120H440v-400h-80v120H80v-320h280v120h240v-120h280v320H600v-120h-80v320h80v-120h280v320H600ZM160-760v160-160Zm520 400v160-160Zm0-400v160-160Zm0 160h120v-160H680v160Zm0 400h120v-160H680v160ZM160-600h120v-160H160v160Z" />
             </svg>
@@ -338,7 +342,7 @@
     
         <!-- Gom cụm -->
         <li>
-          <a href="#" id="popular-link" onclick="toggleSubMenu('clustering')">
+          <a href="#" onclick="toggleSubMenu('clustering')">
             <i class="fas fa-object-group"></i>
             Gom cụm
           </a>
