hoan thanh gom cum va phan lop

--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -222,13 +222,13 @@
           </a>
           <ul class="sub-menu" id="clustering">
             <li>
-              <a href="bayes.html">
+              <a href="{% url 'bayes' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Bayes
               </a>
             </li>
             <li>
-              <a href="laplace.html">
+              <a href="{% url 'laplace' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Laplace
               </a>
@@ -240,7 +240,7 @@
               </a>
             </li>
             <li>
-              <a href="kohonen.html">
+              <a href="{% url 'kohonen' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Kohonen
               </a>
