--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li>
-              <a href="laplace.html">
+              <a href="{% url 'laplace' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Laplace
               </a>
@@ -247,7 +247,7 @@
               </a>
             </li>
             <li>
-              <a href="kohonen.html">
+              <a href="{% url 'kohonen' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Mạng Kohonen
               </a>
