--- a/site1/home/Templates/laplace.html
+++ b/site1/home/Templates/laplace.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xác Suất Naive Bayes (Làm Trơn Laplace)</title>
+    <title>Xác Suất Naive Bayes</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <style>
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+            background-color: #f4f4f9;
+          }
+
         label {
             font-weight: bold;
         }
@@ -21,13 +27,13 @@
         }
         button {
             cursor: pointer;
-            background-color: #007bff;
+            background-color: #1e293b;
             color: white;
             border: none;
             border-radius: 5px;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #1e293b;
         }
         .error {
             color: red;
@@ -42,7 +48,244 @@
         .hidden {
             display: none;
         }
+
+        .sidebar {
+            width: 300px;
+            background-color: #1e293b;
+            color: white;
+            height: 100vh;
+            position: fixed;
+            padding: 20px;
+            overflow-y: auto;
+          }
+    
+          .sidebar h2 {
+            font-size: 20px;
+            margin-bottom: 20px;
+            color: #f4f4f9;
+          }
+    
+          .sidebar ul {
+            list-style: none;
+            padding: 0;
+          }
+    
+          .sidebar ul li {
+            margin: 15px 0;
+          }
+    
+          .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+          }
+    
+          .sidebar ul li a:hover {
+            background-color: #3b82f6;
+          }
+    
+          .sidebar ul li a#home-link {
+            color: #f8fafc;
+          }
+    
+          .sidebar ul li a i,
+          .sidebar ul li a svg {
+            margin-right: 10px;
+            flex-shrink: 0; /* Ngăn icon bị co khi chữ dài */
+          }
+    
+          .sub-menu {
+            display: block;  /* Đảm bảo submenu luôn hiển thị */
+            margin-left: 20px;
+          }
+          
+          .sub-menu li a {
+            background-color: transparent; 
+            color: #fff; 
+            display: block;
+            padding: 5px 15px;
+            padding-left: 20px;
+            text-decoration: none;
+          }
+          
+          .sub-menu li a:hover {
+            background-color: #007bff; 
+            color: #fff;
+            border-radius: 5px;
+          }
+    
+          .main-content {
+            margin-left: 320px;
+            padding: 20px;
+          }
+    
+          .content-header {
+            background-color: #f8fafc;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+          }
+    
+          .content-header h1 {
+            margin: 0;
+            font-size: 24px;
+            color: #1e293b;
+          }
+    
+          .content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            min-height: 400px;
+            display: flex;
+            justify-content: space-between; /* Đẩy các cột cách đều nhau */
+            align-items: stretch;
+          }
+    
+          .content img {
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+          }
+    
+          .content p {
+            font-size: 16px;
+            color: #374151;
+          }
+    
+            .sidebar ul li a#popular-link {
+              color: #ffd700; 
+              font-weight: bold; /* Làm đậm chữ */
+            }
+    
+            .sidebar ul li a i,
+            .sidebar ul li a svg {
+              margin-right: 10px;
+              flex-shrink: 0; /* Ngăn icon bị co khi chữ dài */
+            }
+    
+            .sub-menu {
+              display: none;
+              padding-left: 20px;
+            }
+    
+            .sub-menu li {
+              margin: 10px 0;
+            }
+    
+            .sub-menu li a {
+              background-color: #3b82f6;
+            }
+    
+            .uploadexcel {
+              text-align: center;
+              margin-top: 50px;
+              color: white;
+              background-color:#1e293b;
+    
+          }
+    
+          #file-upload {
+              display: none;
+          }
+    
+          #upload-button {
+              background-color: #FFFF;
+              color: black;
+              padding: 15px 32px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer; 
+    
+          }
+        
+          .form-container {
+            flex: 1; /* Chiếm một phần không gian */
+            margin-right: 20px; /* Tạo khoảng cách với kết quả */
+            background-color: #f8fafc;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        
+          .form-container h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #1e293b;
+          }
+        
+          .form-group {
+            margin-bottom: 20px;
+          }
+        
+          .form-group label {
+            display: block;
+            font-size: 18px;
+            color: #1e293b;
+            margin-bottom: 5px;
+          }
+        
+          .form-group input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+          }
+        
+          .form-group button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #1e293b;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+          }
+        
+          .form-group button:hover {
+            background-color: #1e293b;
+          }
+        
+          .result-container {
+            flex: 1; /* Chiếm một phần không gian */
+            background-color: #f8fafc;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        
+          .result-container h2 {
+            font-size: 24px;
+            color: #1e293b;
+            margin-bottom: 20px;
+          }
+        
+          .result-container ul {
+            list-style: none;
+            padding: 0;
+          }
+        
+          .result-container li {
+            font-size: 18px;
+            color: #374151;
+            margin-bottom: 10px;
+          }
+    
+          .result-item {
+            margin-bottom: 30px; /* Tạo khoảng cách giữa các dòng */
+        }
     </style>
+    
     <script>
         function showValues(column) {
             const valueDiv = document.getElementById(`values-${column}`);
