finalize interface for bayes and laplace algorithms

--- a/site1/home/Templates/bayes.html
+++ b/site1/home/Templates/bayes.html
@@ -416,7 +416,7 @@
             <h2>Xác Suất Naive Bayes</h2>
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                <label for="file">Chọn file (CSV/Excel):</label>
+                <label for="file">Upload File:</label>
                 <input type="file" id="file" name="file">
                 <button type="submit">Tải lên</button>
             </form>
