--- a/site1/home/Templates/laplace.html
+++ b/site1/home/Templates/laplace.html
@@ -298,49 +298,176 @@
     </script>
 </head>
 <body>
+  <div class="sidebar">
+    <h2><i class="fas fa-database"></i> Home</h2>
+    <ul>
+      <!-- Trang chủ -->
+      <li>
+        <a href="#" id="home-link" onclick="showHome()">
+          <i class="fas fa-home"></i>
+          <span>Trang chủ</span>
+        </a>
+      </li>
+  
+      <!-- Tiền xử lý dữ liệu -->
+      <li>
+        <a href="{% url 'HSTuongQuan' %}">
+        <i class="fas fa-chart-line"></i>
+        Tiền xử lý dữ liệu
+      </a>
+    </li>
+  
+      <!-- Tập phổ biến -->
+      <li>
+        <a href="{% url 'TapPhoBien' %}">
+          <i class="fas fa-layer-group"></i>
+          Tập phổ biến và Luật kết hợp
+        </a>
+      </li>
+  
+      <!-- Phân lớp -->
+      <li>
+        <a href="#" id="popular-link" onclick="toggleSubMenu('classification')">
+          <svg xmlns="http://www.w3.org/2000/svg" height="20px" width="20px" viewBox="0 -960 960 960" fill="#ffffff">
+            <path d="M600-120v-120H440v-400h-80v120H80v-320h280v120h240v-120h280v320H600v-120h-80v320h80v-120h280v320H600ZM160-760v160-160Zm520 400v160-160Zm0-400v160-160Zm0 160h120v-160H680v160Zm0 400h120v-160H680v160ZM160-600h120v-160H160v160Z" />
+          </svg>
+          <span>Phân lớp</span>
+        </a>
+        <ul class="sub-menu" id="classification">
+          <li>
+            <a href="bayes" id="popular-link">
+              <i class="fas fa-arrow-circle-right"></i>
+              Bayes
+            </a>
+          </li>
+          <li>
+            <a href="laplace">
+              <i class="fas fa-arrow-circle-right"></i>
+              Laplace
+            </a>
+          </li>
+          <li>
+            <a href="#" onclick="toggleSubMenu('decisionTree')">
+              <i class="fas fa-arrow-circle-right"></i>
+              Cây quyết định
+            </a>
+            <ul class="sub-menu" id="decisionTree">
+              <li>
+                <a href="{% url 'gain' %}">
+                  <i class="fas fa-sitemap"></i>
+                  Gain
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'gini' %}">
+                  <i class="fas fa-tree"></i>
+                  Gini
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+  
+      <!-- Tập thô -->
+      <li>
+        <a href="#" onclick="toggleSubMenu('reducts')">
+          <i class="fas fa-stream"></i>
+          Tập thô
+        </a>
+        <ul class="sub-menu" id="reducts">
+          <li>
+            <a href="{% url 'dependency' %}">
+              <i class="fas fa-arrow-circle-right"></i>
+              Khảo sát sự phụ thuộc
+            </a>
+          </li>
+          <li>
+            <a href="{% url 'approximation' %}">
+              <i class="fas fa-arrow-circle-right"></i>
+              Tính xấp xỉ
+            </a>
+          </li>
+          <li>
+            <a href="{% url 'reduct' %}">
+              <i class="fas fa-arrow-circle-right"></i>
+              Tính các tập thô
+            </a>
+          </li>
+        </ul>
+      </li>
+  
+      <!-- Gom cụm -->
+      <li>
+        <a href="#" onclick="toggleSubMenu('clustering')">
+          <i class="fas fa-object-group"></i>
+          Gom cụm
+        </a>
+        <ul class="sub-menu" id="clustering">
+          <li>
+            <a href="{% url 'kmeans' %}">
+              <i class="fas fa-arrow-circle-right"></i>
+              K-Means
+            </a>
+          </li>
+          <li>
+            <a href="kohonen">
+              <i class="fas fa-arrow-circle-right"></i>
+              Mạng Kohonen
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  
+  <div class="main-content">
     <h1>Xác Suất Naive Bayes (Làm Trơn Laplace)</h1>
 
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <label for="file">Chọn file (CSV/Excel):</label>
-        <input type="file" id="file" name="file">
-        <button type="submit">Tải lên</button>
-    </form>
-
-    {% if error %}
-        <p class="error">{{ error }}</p>
-    {% endif %}
-
-    {% if data_uploaded %}
-        <form method="POST">
+    <div class="form-container">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="target-column">Chọn cột quyết định:</label>
-            <select id="target-column" name="target_column" required>
-                {% for column in columns %}
-                    <option value="{{ column }}">{{ column }}</option>
-                {% endfor %}
-            </select>
-
-            <label>Chọn các cột tham gia:</label>
-            {% for column, values in unique_values %}
-                <div>
-                    <input type="checkbox" name="feature_columns" value="{{ column }}" id="feature-{{ column }}" onclick="showValues('{{ column }}')">
-                    <label for="feature-{{ column }}">{{ column }}</label>
-                </div>
-
-                <div id="values-{{ column }}" class="hidden" style="margin-left: 20px;">
-                    <label for="value-{{ column }}">Chọn giá trị cho {{ column }}:</label>
-                    <select name="{{ column }}" id="value-{{ column }}">
-                        {% for value in values %}
-                            <option value="{{ value }}">{{ value }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            {% endfor %}
-
-            <button type="submit" name="calculate">Tính xác suất</button>
+            <label for="file">Chọn file (CSV/Excel):</label>
+            <input type="file" id="file" name="file">
+            <button type="submit">Tải lên</button>
         </form>
-    {% endif %}
+
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        {% if data_uploaded %}
+            <form method="POST">
+                {% csrf_token %}
+                <label for="target-column">Chọn cột quyết định:</label>
+                <select id="target-column" name="target_column" required>
+                    {% for column in columns %}
+                        <option value="{{ column }}">{{ column }}</option>
+                    {% endfor %}
+                </select>
+
+                <label>Chọn các cột tham gia:</label>
+                {% for column, values in unique_values %}
+                    <div>
+                        <input type="checkbox" name="feature_columns" value="{{ column }}" id="feature-{{ column }}" onclick="showValues('{{ column }}')">
+                        <label for="feature-{{ column }}">{{ column }}</label>
+                    </div>
+
+                    <div id="values-{{ column }}" class="hidden" style="margin-left: 20px;">
+                        <label for="value-{{ column }}">Chọn giá trị cho {{ column }}:</label>
+                        <select name="{{ column }}" id="value-{{ column }}">
+                            {% for value in values %}
+                                <option value="{{ value }}">{{ value }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                {% endfor %}
+
+                <button type="submit" name="calculate">Tính xác suất</button>
+            </form>
+        {% endif %}
+    </div>
 
     {% if success %}
         <div class="result">
@@ -371,5 +498,7 @@
             </ul>
         </div>
     {% endif %}
+</div>
+
 </body>
 </html>
